--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.1.1'
+        classpath 'com.android.tools.build:gradle:7.0.3'
         
 
         // NOTE: Do not place your application dependencies here; they belong
@@ -19,8 +19,9 @@ allprojects {
     repositories {
         google()
         jcenter()
-        maven { url 'https://jitpack.io' }
-        maven { url  "http://dl.bintray.com/lukaville/maven" }
+        maven { url "https://jitpack.io" }
+        mavenCentral()
+
     }
 }
 
