--- a/tv/build.gradle
+++ b/tv/build.gradle
@@ -1,11 +1,11 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 27
+    compileSdkVersion 31
     defaultConfig {
         applicationId "com.synergics.stb.iptv.leanback"
         minSdkVersion 21
-        targetSdkVersion 27
+        targetSdkVersion 30
         versionCode 1
         versionName "1.0"
     }
@@ -18,24 +18,25 @@ android {
             resValue("string", "PORT_NUMBER", "8082")
         }
     }
+    buildToolsVersion '31.0.0'
 }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.android.support:leanback-v17:27.1.1'
-    implementation 'com.android.support:appcompat-v7:27.1.1'
+    implementation 'androidx.leanback:leanback:1.0.0'
+    implementation 'androidx.appcompat:appcompat:1.4.0'
     implementation 'com.github.pedroSG94.vlc-example-streamplayer:pedrovlc:2.5.14v3'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.2'
     implementation 'com.google.code.gson:gson:2.8.4'
     implementation ('com.github.bumptech.glide:glide:4.7.1'){
         exclude group: "com.android.support"
     }
-    implementation ('com.nbsp:library:1.8'){
+    implementation ('com.nbsp:materialfilepicker:1.9.1'){
         exclude group: "com.android.support"
     }
 
     // Database
-    implementation 'android.arch.persistence.room:runtime:1.0.0'
-    annotationProcessor 'android.arch.persistence.room:compiler:1.0.0'
+    implementation 'androidx.room:room-runtime:2.3.0'
+    annotationProcessor 'androidx.room:room-compiler:2.3.0'
     debugImplementation 'com.amitshekhar.android:debug-db:1.0.3'
 }
